Prepare backend for deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost:27017/myDatabase
+MONGO_URI=mongodb+srv://loganayakikavin:kavin%402525@cluster0.bwb1qyq.mongodb.net/myDatabase?retryWrites=true&w=majority
